implementing some best practices